--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Calendário</title>
-    <script src="script.js"></script>
+    
 </head>
 <body>
     <div class="container">
@@ -20,16 +21,25 @@
                 <i class="fa fa-angle-right next"></i>
             </div>
             <div class="weekdays">
-                <div>Sun</div>
+                <div>Dom</div>
                 <div>Mon</div>
                 <div>Tue</div>
                 <div>Wed</div>
-                <div>Thu</div>
+                <div>Qui</div>
                 <div>Fri</div>
                 <div>Sat</div>
             </div>
             <div class="days"></div>
         </div>
     </div>
+
+    <script src="script.js"></script>
+
+    <script>
+       
+        </script>
+
+
+
 </body>
 </html>
